<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mutualBlockItem"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/blockStatus"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="2dp"
                android:text="Status of Block:"
                android:textColor="@android:color/white"
                android:textAlignment="viewStart"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/colorGray"
                    android:id="@+id/own_chain_indicator"
                    android:paddingEnd="6dp">

                    <TextView
                        android:id="@+id/userMutualBlock"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="middle"
                        android:singleLine="true"
                        android:text="User"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sequenceNumberMutualBlock"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="2dp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:text="seqNum"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGray"
                    android:layout_marginLeft="5dp"
                    android:orientation="vertical"
                    android:id="@+id/link_chain_indicator_mutualBlock"
                    android:paddingEnd="6dp">

                    <TextView
                        android:id="@+id/peerMutualBlock"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:ellipsize="middle"
                        android:singleLine="true"
                        android:text="Link peer"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/linkSeqNumMutualBlock"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:textSize="12sp"
                        android:layout_marginLeft="5dp"
                        android:singleLine="true"
                        android:ellipsize="middle"
                        android:layout_marginBottom="2dp"
                        android:text="linkSeq"/>
                </LinearLayout>


                <TextView
                    android:id="@+id/transactionMutualBlock"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="middle"
                    android:maxLines="2"
                    android:paddingStart="6dp"
                    android:text="Transaction"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <!--<ImageView-->
                <!--android:id="@+id/expand_arrow"-->
                <!--android:layout_width="40dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:src="@drawable/ic_expand_more_black_24dp" />-->

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--The sign button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:padding="5dp"
        android:layout_marginTop="-10dp"
        android:id="@+id/sign_layout">

        <Button
            android:id="@+id/sign_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sign_block"
            android:background="@color/colorPrimary"/>
</LinearLayout>

<!--<TableLayout-->
    <!--android:id="@+id/expanded_item"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:shrinkColumns="1"-->
    <!--android:visibility="gone"-->
    <!--android:paddingLeft="16dp"-->
    <!--android:paddingRight="16dp"-->
    <!--android:paddingTop="4dp">-->

    <!--<TableRow>-->
    <!--<TextView-->
    <!--android:textSize="13sp"-->
    <!--android:textStyle="bold"-->
    <!--android:text="@string/item_public_key"/>-->

    <!--<TextView-->
    <!--android:id="@+id/pub_key"-->
    <!--android:textSize="13sp"/>-->
    <!--</TableRow>-->

    <!--<TableRow>-->
    <!--<TextView-->
    <!--android:textSize="13sp"-->
    <!--android:textStyle="bold"-->
    <!--android:text="@string/item_link_public_key"/>-->

    <!--<TextView-->
    <!--android:id="@+id/link_pub_key"-->
    <!--android:textSize="13sp"/>-->
    <!--</TableRow>-->

    <!--<TableRow>-->
    <!--<TextView-->
    <!--android:textSize="13sp"-->
    <!--android:textStyle="bold"-->
    <!--android:text="@string/item_prev_hash"/>-->

    <!--<TextView-->
    <!--android:id="@+id/prev_hash"-->
    <!--android:textSize="13sp"/>-->
    <!--</TableRow>-->

    <!--<TableRow>-->
    <!--<TextView-->
    <!--android:textSize="13sp"-->
    <!--android:textStyle="bold"-->
    <!--android:text="@string/item_signature"/>-->

    <!--<TextView-->
    <!--android:id="@+id/signature"-->
    <!--android:textSize="13sp"/>-->
    <!--</TableRow>-->

    <!--<TableRow>-->
    <!--<TextView-->
    <!--android:textSize="13sp"-->
    <!--android:textStyle="bold"-->
    <!--android:text="@string/item_transaction"/>-->

    <!--<TextView-->
    <!--android:id="@+id/expanded_transaction"-->
    <!--android:textSize="13sp"/>-->
    <!--</TableRow>-->

    <!--</TableLayout>-->

</LinearLayout>